use ua os primitives and add set amqp sources
Signed-off-by: Waheed Ejaz <waheed.ejaz@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -900,8 +900,7 @@ if(UA_ENABLE_PUBSUB)
     endif()
 
     if (UA_ENABLE_PUBSUB_AMQP)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.h)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.c)
+        add_subdirectory(${PROJECT_SOURCE_DIR}/plugins/amqp)
     endif()
 endif()
 
