--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -900,7 +900,92 @@ if(UA_ENABLE_PUBSUB)
     endif()
 
     if (UA_ENABLE_PUBSUB_AMQP)
-        add_subdirectory(${PROJECT_SOURCE_DIR}/plugins/amqp)
+        MESSAGE(WARNING "Building AMQP subdirectory")
+        #add_subdirectory(${PROJECT_SOURCE_DIR}/plugins/amqp)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/event.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/transport.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/log.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/message.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/autodetect.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/framing.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/codec.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/memory.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/util.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/types.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/dispatcher.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/logger.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/init.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/connection_driver.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/error.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/engine.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/encoder.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/decoder.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/buffer.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/iterator.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/map.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/string.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/list.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/object.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/record.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/proactor-internal.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/netaddr-internal.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/epoll.c)
+
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/buffer.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/config.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/encoder.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/transport.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/logger_private.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/log_private.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/autodetect.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/data.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/dispatcher.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/max_align.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/init.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/framing.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/memory.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/decoder.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/dispatch_actions.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/engine-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/util.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/message-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/disposition.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/codec.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/proactor.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/transport.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/connection_driver.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/message.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/url.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/reactor.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/sasl-plugin.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/sasl.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/listener.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/error.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/netaddr.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/condition.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/delivery.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/connection.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/session.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/engine.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/import_export.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/cid.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/object.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/terminus.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/logger.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/type_compat.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/handlers.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/link.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/messenger.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/log.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/selectable.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/event.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/types.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/ssl.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/proactor-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/epoll-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/netaddr-internal.h)
     endif()
 endif()
 
@@ -1185,7 +1270,6 @@ else()
     target_include_directories(open62541-object PRIVATE ${PROJECT_SOURCE_DIR}/src)
 
     add_library(open62541-plugins OBJECT ${default_plugin_sources} ${ua_architecture_sources} ${exported_headers})
-    add_dependencies(open62541-plugins open62541-generator-types open62541-generator-transport open62541-generator-namespace)
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_SOURCE_DIR}/plugins)
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_BINARY_DIR}/src_generated)
     target_compile_definitions(open62541-plugins PRIVATE -DUA_DYNAMIC_LINKING_EXPORT)
@@ -1222,6 +1306,7 @@ else()
                                "${PROJECT_SOURCE_DIR}/include"
                                "${PROJECT_SOURCE_DIR}/plugins/include"
                                "${PROJECT_SOURCE_DIR}/deps"
+                                "${PROJECT_SOURCE_DIR}/deps/amqp"
                                "${PROJECT_SOURCE_DIR}/src/pubsub"
                                "${PROJECT_BINARY_DIR}/src_generated")
 
