WIP: some warnings fixed
Signed-off-by: Waheed Ejaz <waheed.ejaz@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -900,27 +900,40 @@ if(UA_ENABLE_PUBSUB)
     endif()
 
     if (UA_ENABLE_PUBSUB_AMQP)
-        MESSAGE(WARNING "Building AMQP subdirectory")
+        #MESSAGE(WARNING "Building AMQP subdirectory")
         #add_subdirectory(${PROJECT_SOURCE_DIR}/plugins/amqp)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/event.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/transport.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/log.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/message.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/autodetect.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/framing.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/codec.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/memory.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/util.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/types.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/dispatcher.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/logger.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/init.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/connection_driver.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/error.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/engine.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/encoder.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/decoder.c)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/buffer.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/event.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/transport.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/log.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/message.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/autodetect.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/framing.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/codec.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/memory.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/util.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/types.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/dispatcher.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/logger.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/init.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/connection_driver.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/error.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/engine.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/encoder.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/decoder.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/buffer.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/iterator.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/map.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/string.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/list.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/object.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/core/object/record.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/platform/platform.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/ssl/ssl_stub.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/ssl/openssl.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/sasl/sasl.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/sasl/default_sasl.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/sasl/cyrus_sasl.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/sasl/cyrus_stub.c)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/iterator.c)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/map.c)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/deps/amqp/object/string.c)
@@ -932,24 +945,28 @@ if(UA_ENABLE_PUBSUB)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/netaddr-internal.c)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/epoll.c)
 
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/buffer.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/config.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/encoder.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/transport.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/logger_private.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/log_private.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/autodetect.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/data.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/dispatcher.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/max_align.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/init.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/framing.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/memory.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/decoder.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/dispatch_actions.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/engine-internal.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/util.h)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/message-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/buffer.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/config.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/encoder.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/transport.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/logger_private.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/log_private.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/autodetect.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/data.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/dispatcher.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/max_align.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/init.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/framing.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/memory.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/decoder.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/dispatch_actions.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/engine-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/util.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/core/message-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/platform/platform_fmt.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/platform/platform.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/ssl/ssl-internal.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/sasl/sasl-internal.h)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/disposition.h)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/codec.h)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/amqp/proton/proactor.h)
@@ -1272,6 +1289,10 @@ else()
     add_library(open62541-plugins OBJECT ${default_plugin_sources} ${ua_architecture_sources} ${exported_headers})
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_SOURCE_DIR}/plugins)
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_BINARY_DIR}/src_generated)
+    add_custom_command(
+            OUTPUT ${default_plugin_sources}
+            COMMAND "${CMAKE_C_COMPILER}" -E
+    )
     target_compile_definitions(open62541-plugins PRIVATE -DUA_DYNAMIC_LINKING_EXPORT)
     set_target_properties(open62541-plugins PROPERTIES FOLDER "open62541/lib")
 
